# UDP

./: CMakeLists.txt  README.md
include/: VDMocapSDK_DataRead_DataType.h  libCodeTest.h
src/: libCodeTest.cpp  main.cpp
